<resources>
    <string name="app_name">Shawkeen</string>
    <string name="app_name2">Shawkeen</string>
    <string name="title_setting">Settings</string>
    <string name="title_filter">Filter</string>
    <string name="title_message">Messages</string>
    <string name="err_password_missing">Please enter password</string>
    <string name="err_password_length_invalid">Password length should be 8 to 20 characters</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="err_otp_missing">Please enter OTP</string>
    <string name="err_title_missing">Please enter title of post</string>
    <string name="err_discription_missing">Please enter description of post</string>
    <string name="change_password">Change Password</string>
    <string name="err_old_password_missing">Please enter old password</string>
    <string name="err_new_password_missing">Please enter new password</string>
    <string name="err_new_password_min_length">Password must be 8 characters long</string>
    <string name="err_new_password_max_length">Password length must not be greater than 16</string>
    <string name="err_confirm_password_missing">Please confirm password</string>
    <string name="err_passwords_not_same">Passwords do not match</string>
    <string name="err_new_password_matches_new_password">New password is the same as old
password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="no_network_connected">No Network Connection</string>
    <string name="msg_app_close">Are you sure you want to close the app?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="email_address">Email Address</string>
    <string name="forgot_your_password_q"><u>Forgot password?</u></string>
    <string name="hello">Hello</string>
    <string name="sign_into_your_account">Sign in to your account</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_your_password">Forgot your password</string>
    <string name="bad_response">Bad Response</string>
    <string name="something_went_wrong">Oops, something went wrong</string>
    <string name="logout">Logout</string>
    <string name="msg_app_logout_confirmation">Are you sure you want\nto logout?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="submit">Submit</string>
    <string name="forgot_password_subtitle">Please enter your email. We\'ll send you a reset password link.</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="notification">Notifications</string>
    <string name="change_your_password">Change Your Password</string>
    <string name="client_workflow">Client workflow</string>
    <string name="client_workflow_desc">Client Workflow description</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="pick_an_image">Pick an image</string>
    <string name="capture_image">Capture Image</string>
    <string name="pick_a_file">Pick a file</string>
    <string name="next">Next</string>
    <string name="delete">Delete</string>
    <string name="select_an_option">Select an option</string>
    <string name="title">Title</string>
    <string name="value">Value</string>
    <string name="details">Details</string>
    <string name="confirm">Confirm</string>
    <string name="choose_language">Choose Language</string>
    <string name="continue_str">Continue</string>
    <string name="password">Password</string>
    <string name="verification">Verification OTP code sent to</string>
    <string name="resend_the_code"><u>Resend the Code</u></string>
    <string name="phone_number">Phone Number</string>
    <string name="label_brush">Brush</string>
    <string name="label_emoji">Emojis</string>
    <string name="label_sticker">Stickers</string>
    <string name="label_eraser">Eraser</string>
    <string name="label_text">Text</string>
    <string name="label_filter">Filter</string>
    <string name="label_adjust">Adjust</string>
    <string name="label_more">More</string>
    <string name="label_crop">Crop</string>
    <string name="label_free">Free</string>
    <string name="label_original">Original</string>
    <string name="label_square">Square</string>
    <string name="label_rotate">Rotate</string>
    <string name="label_brightness">Brightness</string>
    <string name="label_saturation">Saturation</string>
    <string name="label_beauty">Beauty</string>
    <string name="label_smoothness">Smoothness</string>
    <string name="label_skintone">Skin Tone</string>
    <string name="label_apply">Apply</string>
    <string name="label_done">Done</string>
    <string name="slide_to_cancel">Slide to cancel</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="language">Language</string>
    <string name="invalid_lat_long_used">Invalid lat long</string>
    <string name="no_address_found">No address found</string>
    <string name="address_found">Address found</string>
    <string name="Cancel">Cancel</string>
    <string name="discover">Discover</string>
    <string name="updates">Updates</string>
    <string name="signup">Sign Up</string>
    <string name="choose_areas_you_interested">Choose areas of interest</string>
    <string name="cat_saved_successfully">Your categories are saved</string>
    <string name="follow_popular_users">Follow popular users</string>
    <string name="unfollow">Unfollow</string>
    <string name="follow">Follow</string>
    <string name="get_started">Get Started</string>
    <string name="following">Following</string>
    <string name="search">Search</string>
    <string name="add_to_board">Add to Board</string>
    <string name="report"><u>Report</u></string>
    <string name="dot_date"> &#032;&#032; \u2022 %1$s</string>
    <string name="see_more_comments">SEE MORE COMMENTS (%1$d)</string>
    <string name="x_comments">%1$d COMMENTS</string>
    <string name="see_less">less</string>
    <string name="choose_option">Choose an Option</string>
    <string name="related_posts">RELATED POSTS</string>
    <string name="near_by">Nearby</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="account_settings">Account Settings</string>
    <string name="terms_amp_conditions">Terms &amp; Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="security">Security</string>
    <string name="about_app">About App</string>
    <string name="faq">FAQ</string>
    <string name="profile_name">Profile Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="profile_tagline">Profile Tagline</string>
    <string name="gender">Gender</string>
    <string name="interests">Interests</string>
    <string name="description">Description</string>
    <string name="tag">Tag</string>
    <string name="location">Location</string>
    <string name="post">Post</string>
    <string name="video">Video</string>
    <string name="image">Image</string>
    <string name="video_editing"> Edit Video</string>
    <string name="save">Save</string>
    <string name="processing_video">Processing Video</string>
    <string name="video_1">Video 1</string>
    <string name="video_2">Video 2</string>
    <string name="select_music">Select music</string>
    <string name="label">Label</string>
    <string name="error_filter">Select the video which you want to add filter animation</string>
    <string name="error_crop">Select the video which you want to add crop</string>
    <string name="error_music">Select the video which you want to merge the audio</string>
    <string name="error_speed">Select the video which you want to add speed animation</string>
    <string name="error_text">Select the video which you want to add text inside video</string>
    <string name="error_sticker">Select the video which you want to add sticker inside video</string>
    <string name="error_merge">Select 2 videos which you want to merge</string>
    <string name="error_transition">Select the video which you want to perform transition</string>
    <string name="error_select_sticker">Select the sticker which you want to show inside the video</string>
    <string name="error_select_sticker_pos">Select the position where you want to show the sticker</string>
    <string name="error_add_text">Add the text which you want to show inside the video</string>
    <string name="error_add_text_pos">Select the position where you want to show the text</string>
    <string name="error_select_speed">Select the playback speed which you want to apply to the video</string>
    <string name="error_select_filter">Select the filter which you want to apply to the video</string>
    <string name="error_select_smaller_video">Select the video smaller than 4 minutes</string>
    <string name="play_time">Play Time</string>
    <string name="enter_text_here">Enter text here</string>
    <string name="save_video">Would you like to save your edited video?</string>
    <string name="Continue">Continue</string>
    <string name="successfully_saved">Your video was successfully saved</string>
    <string name="not_supported_video">Video format is not supported. Would you like to convert avi to mp4 format?</string>
    <string name="short_seconds">sec</string>
    <string name="megabyte">MB</string>
    <string name="kilobyte">KB</string>
    <string name="trimming_progress">Trimming your video…</string>
    <string name="cancel">Cancel</string>
    <string name="select_a_video">Select a Video</string>
    <string name="select_action">Select Action</string>
    <string name="select_video_from_gallery">Select video from gallery</string>
    <string name="record_video_from_camera">Record video from camera</string>
    <string name="type_your_comment">Type your comment…</string>
    <string name="bio">Bio</string>
    <string name="name_placeholder" translatable="false">%1$s %2$s</string>
    <string name="likes_placeholder" translatable="false"><b>%1$d</b><![CDATA[<b><font
color=#a6a6a6><br/>Likes</font></b>]]></string>
    <string name="views_placeholder" translatable="false"><b>%1$d</b><![CDATA[<b><font
color=#a6a6a6><br/>Views</font></b>]]></string>
    <string name="followers_placeholder" translatable="false"><b>%1$d</b><![CDATA[<b><font
color=#a6a6a6><br/>Followers</font></b>]]></string>
    <string name="comments_placeholder" translatable="false"><b>%1$d</b><![CDATA[<b><font
color=#a6a6a6><br/>Comments</font></b>]]></string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="my_profile">My Profile</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="user_name">Username</string>
    <string name="my_posts">My Posts</string>
    <string name="my_boards">My Boards</string>
    <string name="settings">Settings</string>
    <string name="no_boards_found">No boards found</string>
    <string name="no_item_found">No item found</string>
    <string name="no_post_found">No post found</string>
    <string name="msg_pinboards_not_available">No boards created yet</string>
    <string name="pinboard_name">Board Name</string>
    <string name="err_board_name_missing">Please enter a board name</string>
    <string name="img_upload_failed">Failed to upload image</string>
    <string name="channel_name">Nuna</string>
    <string name="edit">Edit</string>
    <string name="prefer_not_to_say">Prefer not to say</string>
    <string name="select_image_for_edit">Select an image to edit</string>
    <string name="cancel_post">Your video and data will be lost. Continue anyway?</string>
    <string name="delete_post_msg">Are you sure you want\nto delete?</string>
</resources>