<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
  >
    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPrimaryDark">

        <ImageView
            android:id="@+id/ivAppLogo"
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_32sdp"
            android:src="@drawable/ic_back_custom"
            android:layout_marginStart="@dimen/_10sdp"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvHeader"
            android:contentDescription="@string/app_name"/>

        <TextView
            android:elegantTextHeight="true"
            android:fontFamily="@font/gothampro_medium"
            android:id="@+id/tvHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_16sdp"
            android:textColor="@color/white"
            android:padding="@dimen/_10sdp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/select_image_for_edit"
            android:textAlignment="center"
            app:layout_constraintStart_toEndOf="@+id/ivAppLogo"
            app:layout_constraintEnd_toStartOf="@+id/tvSave"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageView
            android:id="@+id/imageShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/share_white"
            android:visibility="visible"
            android:padding="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/save"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:elegantTextHeight="true"
        android:background="@drawable/bg_chip_blue_gradient_cornered"
        android:drawableRight="@drawable/edit_photo"
        android:id="@+id/btn_add_images"
        android:layout_width="wrap_content"
        android:textSize="@dimen/_12sdp"
        android:drawablePadding="4dp"
        android:padding="@dimen/_7sdp"
       android:textColor="#FFF"
        android:theme="@style/medium"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/edit" />

    <ImageView
        android:layout_margin="10dp"
        android:id="@+id/img_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/recycler_picker_list"
        android:layout_marginBottom="1dp"
        android:layout_weight="1" />


    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="100dp" />

</LinearLayout>
