<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="24dp">

            <ImageView
                android:id="@+id/ivLogoutIcon"
                android:layout_width="@dimen/_43sdp"
                android:layout_height="@dimen/_45sdp"
                android:src="@drawable/ic_delete_post" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_18sdp"
                    android:fontFamily="@font/gotham_pro"
                    android:gravity="center"
                    android:lineSpacingMultiplier="1.3"
                    android:text="@string/delete_post_msg"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/tvInfo">

                    <TextView
                        android:id="@+id/btnCancel"
                        style="@style/AlertDialogActionButton"
                        android:layout_marginEnd="4dp"
                        android:text="@string/Cancel" />

                    <TextView
                        android:id="@+id/btnDelete"
                        style="@style/AlertDialogActionButton"
                        android:layout_marginStart="4dp"
                        android:text="@string/delete" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>
