<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <HorizontalScrollView
        android:id="@+id/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/btn_paint"
                style="@style/option_style"
                android:layout_weight="1"
                android:visibility="gone"
                android:orientation="vertical">

                <ImageView
                    style="@style/icon_style"
                    android:layout_gravity="center"
                    android:src="@drawable/paint" />

                <TextView
                    android:elegantTextHeight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="Edit"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/image_edit_text_size"
                    tool:text="Text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_filter"
                style="@style/option_style"
                android:layout_weight="1"
                android:visibility="gone"
                android:orientation="vertical">

                <ImageView
                    style="@style/icon_style"
                    android:layout_gravity="center"
                    android:src="@drawable/filter" />

                <TextView
                    android:elegantTextHeight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/label_filter"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/image_edit_text_size"
                    tool:text="Text" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_crop"
                style="@style/option_style"
                android:layout_weight="1"
                android:visibility="gone"
                android:orientation="vertical">

                <ImageView
                    style="@style/icon_style"
                    android:layout_gravity="center"
                    android:src="@drawable/crop" />

                <TextView
                    android:elegantTextHeight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/label_crop"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/image_edit_text_size"
                    tool:text="Text" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_rotate"
                style="@style/option_style"
                android:layout_weight="1"
                android:visibility="gone"
                android:orientation="vertical">

                <ImageView
                    style="@style/icon_style"
                    android:layout_gravity="center"
                    android:src="@drawable/rotate" />

                <TextView
                    android:elegantTextHeight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/label_rotate"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/image_edit_text_size"
                    tool:text="Text" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_text"
                style="@style/option_style"
                android:layout_weight="1"
                android:visibility="gone"
                android:orientation="vertical">

                <ImageView
                    style="@style/icon_style"
                    android:layout_gravity="center"
                    android:src="@drawable/text" />

                <TextView
                    android:elegantTextHeight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/label_text"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/image_edit_text_size"
                    tool:text="Text" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_stickers"
                style="@style/option_style"
                android:layout_weight="1"
                android:visibility="gone"
                android:orientation="vertical">

                <ImageView
                    style="@style/icon_style"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_stickers" />

                <TextView
                    android:elegantTextHeight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/label_sticker"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/image_edit_text_size"
                    tool:text="Text" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_brightness"
                style="@style/option_style"
                android:layout_weight="1"
                android:visibility="gone"
                android:orientation="vertical">

                <ImageView
                    style="@style/icon_style"
                    android:layout_gravity="center"
                    android:src="@drawable/brightness" />

                <TextView
                    android:elegantTextHeight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/label_brightness"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/image_edit_text_size"
                    tool:text="Text" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_contrast"
                style="@style/option_style"
                android:layout_weight="1"
                android:visibility="gone"
                android:orientation="vertical">

                <ImageView
                    style="@style/icon_style"
                    android:layout_gravity="center"
                    android:src="@drawable/dropper" />

                <TextView
                    android:elegantTextHeight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/label_saturation"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/image_edit_text_size"
                    tool:text="Text" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_beauty"
                style="@style/option_style"
                android:layout_weight="1"
                android:visibility="gone"
                android:orientation="vertical">

                <ImageView
                    style="@style/icon_style"
                    android:layout_gravity="center"
                    android:src="@drawable/beauty" />

                <TextView
                    android:elegantTextHeight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/label_beauty"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/image_edit_text_size"
                    tool:text="Text" />

            </LinearLayout>

        </LinearLayout>
    </HorizontalScrollView>

</RelativeLayout>

